2000-11-22  Radek Doulik  <rodo@helixcode.com>

	* image.c (insert_or_apply): use file:// rather than file:

2000-11-15  Radek Doulik  <rodo@helixcode.com>

	* editor-control-factory.c (load_from_corba): update namespace

	* engine.c (impl_set_listener): update namespace

	* updated to API changes

	* HTMLEditor.idl: moved to GNOME namespace

2000-11-14  Radek Doulik  <rodo@helixcode.com>

	* engine.c (impl_run_command): renamed

	* HTMLEditor.idl: changed command to runCommand

	* engine.c: updated to API changes

	* HTMLEditor.idl: StudlyCapsulized

	* spell.c: updated to API changes

	* Spell.idl: copied updated Spell API

2000-11-13  Radek Doulik  <rodo@helixcode.com>

	* engine.c (impl_paragraph_previous_is_empty): new method impl
	(impl_paragraph_is_empty): likewise
	(par_is_empty): helper function, tests if paragraph is empty

	* HTMLEditor.idl: added new methods used while replying

2000-11-10  Radek Doulik  <rodo@helixcode.com>

	* image.c (insert_or_apply): fixed compilation

2000-11-08  Anna Marie Dirks  <anna@helixcode.com> 
        * html-editor-control.xml:  Added keyboard bindings to the composer.

2000-11-04  Radek Doulik  <rodo@helixcode.com>

	* editor-control-factory.c
	(wait_for_bonobo_patch__bonobo_arg_type_to_gtk): new function, it
	should go to bonobo

2000-11-02  Radek Doulik  <rodo@helixcode.com>

	* editor-control-factory.c (editor_api_event): updated to API
	change

	* HTMLEditor.idl: changed event definition, added return value any
	and also change arg parameter to type any as any could contain
	sequence (suggested by Miguel)

	* Makefile.am: install HTMLEditor.idl

2000-10-31  Radek Doulik  <rodo@helixcode.com>

	* editor-control-factory.c (editor_control_construct): extracted
	function, added Engine iface
	(editor_api_event): new method, deliver editor events to
	Engine::Listener

	* control-data.h: added HTMLEditorEngine to GtkHTMLControlData

	* Makefile.am: added engine.[ch]

	* HTMLEditor.idl: added new ifaces - Engine, Listener
